# SPLCUDA

./: CMakeLists.txt  CMakeSettings.json
SPL/: CMakeLists.txt  SPL.cpp  SPL.h
SPL/tests/vector/: CMakeLists.txt  SPL.cpp
doc/: CMakeLists.txt
doc/html/: dir_87c9ed9b5462b8ee3cd6ec4fad9954e2.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  graph_legend.html  index.hhc  index.hhp  index.html
doc/html/d7/d0d/: vector_8hh__incl.map  vector_8hh__incl.md5
doc/html/d8/d0f/: readme_8txt.html
doc/html/dc/d61/: vector_8hh.html  vector_8hh_source.html
include/: readme.txt
include/spl/: typesbase.hh  typesexte.hh  vector3.hh
tests/: CMakeLists.txt
tests/vector/: CMakeLists.txt  main.cu
